<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    tools:context="com.example.android.udamovappv3.activities.DetailedActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/relativeLayoutre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        >

        <TextView
            android:id="@+id/title_name"
            android:layout_width="fill_parent"
            android:layout_height="128dp"
            android:layout_alignParentStart="true"
            android:background="#079ED9"
            android:gravity="start|center"
            android:padding="25dp"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="30sp"

            />

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:id="@+id/iv_poster"
            android:layout_width="131dp"
            android:layout_height="163dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title_name"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/bt_mark_as_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_poster"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="50dp"
            android:background="#079ED9"
            android:text="@string/mark_as_favortie"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_runTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_rating"
            android:layout_below="@+id/tv_releaseDate"
            android:layout_marginTop="11dp"
            android:text="@string/textView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_runTime"
            android:layout_alignTop="@+id/iv_poster"
            android:text="@string/textView"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bt_mark_as_fav"
            android:layout_below="@+id/tv_runTime"
            android:layout_marginTop="11dp"
            android:text="@string/textView" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/iv_poster"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:foregroundGravity="center"
            android:text="@string/random_string"
            android:textColor="#000000"
            />
        <RelativeLayout
            android:id="@+id/foodItemActvity_linearLayout_fragments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/tv_overview"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tv_trailer_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rv_trailer"
                android:layout_below="@+id/tv_trailer_tag"/>

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
